demos/onecommute/force-app/main/default/objects/OneCommute_Survey_Response__c/OneCommute_Survey_Response__c.object-meta.xml
<CustomObject>
    <description>OneCommute demo commuter survey response used by DocGen chart tags.</description>
    <label>OneCommute Survey Response</label>
    <nameField>
        <displayFormat>OCR-{000000}</displayFormat>
        <label>Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OneCommute Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>