demos/onecommute/force-app/main/default/objects/OneCommute_Survey_Response__c/fields/Alternative_Mode__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Mode__c</fullName>
    <label>Alternative Mode Considered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>