demos/onecommute/force-app/main/default/objects/OneCommute_Survey_Response__c/fields/Resource_Interest__c.field-meta.xml
<CustomField>
    <fullName>Resource_Interest__c</fullName>
    <label>Primary Resource Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>