demos/onecommute/force-app/main/default/objects/OneCommute_Survey_Response__c/fields/Resource_Interests__c.field-meta.xml
<CustomField>
    <fullName>Resource_Interests__c</fullName>
    <label>Resource Interests</label>
    <type>TextArea</type>
</CustomField>