demos/onecommute/force-app/main/default/objects/OneCommute_Survey_Response__c/fields/Shuttle_Interest__c.field-meta.xml
<CustomField>
    <fullName>Shuttle_Interest__c</fullName>
    <label>Shuttle Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>