demos/onecommute/force-app/main/default/objects/OneCommute_Survey_Response__c/fields/Survey_Year__c.field-meta.xml
<CustomField>
    <fullName>Survey_Year__c</fullName>
    <label>Survey Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>