demos/onecommute/force-app/main/default/objects/OneCommute_Survey_Response__c/listViews/Current_Year_Responses.listView-meta.xml
<ListView>
    <fullName>Current_Year_Responses</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Employer__c</columns>
    <columns>Commute_Mode__c</columns>
    <columns>Alternative_Mode__c</columns>
    <columns>Shuttle_Interest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Year__c</field>
        <operation>equals</operation>
        <value>2025</value>
    </filters>
    <label>Current Year Responses</label>
</ListView>