demos/onecommute/force-app/main/default/objects/OneCommute_Survey_Response__c/listViews/Demo_Survey_Responses.listView-meta.xml
<ListView>
    <fullName>Demo_Survey_Responses</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Employer__c</columns>
    <columns>Commute_Mode__c</columns>
    <columns>Alternative_Mode__c</columns>
    <columns>Survey_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>Demo Survey Responses</label>
</ListView>