demos/onecommute/force-app/main/default/objects/OneCommute_Survey_Response__c/listViews/Drive_Alone_Responses.listView-meta.xml
<ListView>
    <fullName>Drive_Alone_Responses</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Employer__c</columns>
    <columns>Commute_Mode__c</columns>
    <columns>Alternative_Mode__c</columns>
    <columns>Resource_Interest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Commute_Mode__c</field>
        <operation>equals</operation>
        <value>Drive Alone</value>
    </filters>
    <label>Drive Alone Responses</label>
</ListView>