demos/onecommute/force-app/main/default/objects/OneCommute_Survey_Response__c/listViews/Resource_Requests.listView-meta.xml
<ListView>
    <fullName>Resource_Requests</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Employer__c</columns>
    <columns>Resource_Interest__c</columns>
    <columns>Resource_Interests__c</columns>
    <columns>Survey_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>Resource Requests</label>
</ListView>