demos/onecommute/force-app/main/default/objects/OneCommute_Survey_Response__c/listViews/Shuttle_Interest.listView-meta.xml
<ListView>
    <fullName>Shuttle_Interest</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Employer__c</columns>
    <columns>Shuttle_Interest__c</columns>
    <columns>Commute_Mode__c</columns>
    <columns>Survey_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>Shuttle Interest</label>
</ListView>